load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")
load("//rules/explicit_module:sdk_clang_module.bzl", "sdk_clang_module")

sdk_clang_module(
    name = "swift_concurrency_shims",
    module_map = "__BAZEL_XCODE_SDKROOT__/usr/lib/swift/shims/module.modulemap",
    module_name = "_SwiftConcurrencyShims",
)

sdk_clang_module(
    name = "shims",
    module_map = "__BAZEL_XCODE_SDKROOT__/usr/lib/swift/shims/module.modulemap",
    module_name = "SwiftShims",
)

swift_binary(
    name = "hello_world",
    srcs = ["main.swift"],
    deps = [
        ":shims",
        ":swift_concurrency_shims",
    ],
)
