# Create a set of public config_settings that can be used in select()s.
[
    config_setting(
        name = arch,
        values = {"apple_platform_type": arch},
        visibility = ["//visibility:public"],
    )
    for arch in [
        "ios",
        "macos",
        "tvos",
        "watchos",
    ]
]
