load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

py_binary(
    name = "framework_packaging",
    srcs = ["framework_packaging.py"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "vfs_overlay",
    srcs = ["vfs_overlay.bzl"],
    visibility = ["//rules:__pkg__"],
    deps = [
        "//rules:features",
        "//rules:providers",
        "@bazel_tools//tools/cpp:toolchain_utils.bzl",
        "@build_bazel_rules_swift//swift",
    ],
)
