load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

HMAP_COPTS = [
    "-DHASH_FUNCTION=HASH_MUR",
    "-DHASH_USING_NO_STRICT_ALIASING",
    "-fno-strict-aliasing",
]

HMAP_VISIBILITY = ["//visibility:public"]

cc_library(
    name = "lines",
    srcs = [
        "lines.c",
    ],
    hdrs = [
        "lines.h",
    ],
    copts = ["-Wno-parentheses"],
)

cc_library(
    name = "hmap",
    srcs = [
        "hmap.c",
        "uthash.h",
    ],
    hdrs = [
        "hmap.h",
    ],
    copts = HMAP_COPTS,
    visibility = HMAP_VISIBILITY,
)

cc_binary(
    name = "hmaptool",
    srcs = [
        "hmapbuild.c",
    ],
    copts = HMAP_COPTS,
    visibility = HMAP_VISIBILITY,
    deps = [
        ":hmap",
        ":lines",
    ],
)

cc_binary(
    name = "hmapdump",
    srcs = [
        "hmapdump.c",
    ],
    copts = HMAP_COPTS,
    visibility = HMAP_VISIBILITY,
    deps = ["hmap"],
)

cc_test(
    name = "hmaptest",
    srcs = [
        "hmaptest.c",
    ],
    visibility = ["//visibility:private"],
    deps = ["hmap"],
)
