load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "objc_provider_utils",
    srcs = ["objc_provider_utils.bzl"],
    tags = ["manual"],
    visibility = ["//rules:__pkg__"],
)

bzl_library(
    name = "framework_middleman",
    srcs = ["framework_middleman.bzl"],
    tags = ["manual"],
    visibility = ["//rules:__pkg__"],
    deps = [
        ":objc_provider_utils",
        "//rules:providers",
        "//rules:transition_support",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:partial",
        "@build_bazel_rules_apple//apple",
        "@rules_apple_api//:api",
    ],
)
