load("//rules:framework.bzl", "apple_framework")

SRCS = [
    "empty.swift",
]

# Valid Versions

[apple_framework(
    name = "swift_version_" + version.replace(".", "_"),
    srcs = SRCS,
    swift_version = version,
) for version in [
    "4",
    "4.0",
    "4.0.0",
    "4.2",
    "4.2.0",
    "5",
    "5.0",
    "5.1",
]]

# Invalid Versions (not tested, marked "manual")

[apple_framework(
    name = "swift_version_" + version.replace(".", "_"),
    srcs = SRCS,
    swift_version = version,
    tags = ["manual"],
) for version in [
    "0",
    "4.1",
    "4.3.0",
    "6",
]]
