load("//rules:test.bzl", "ios_unit_test")
load("//rules:xcodeproj.bzl", "xcodeproj")

ios_unit_test(
    name = "Single-Application-UnitTests",
    srcs = ["test.swift"],
    args = ["-h"],
    env = {"test_envvar_key": "test_envvar_value"},
    minimum_os_version = "11.0",
    module_name = "Single_Application_UnitTests",
    sdk_frameworks = ["XCTest"],
)

xcodeproj(
    name = "Single-Application-Project",
    testonly = True,
    bazel_path = "bazelisk",
    deps = [
        "//rules/test_host_app:iOS-12.0-AppHost",
        "//tests/xcodeproj:Single-Application-UnitTests",
    ],
)
