sh_binary(
    name = "update_in_place",
    srcs = ["update_in_place.sh"],
    data = [
        "update_in_place_deps",
        "@arm64-to-sim//:arm64-to-sim",
    ],
    # See below comment
    # env = {"ARM64_TO_SIM_PATH": "$(location @arm64-to-sim//:arm64-to-sim)"},
    visibility = ["//visibility:public"],
)

sh_library(
    name = "update_in_place_deps",
    # TODO: replace arm64-to-sim with "@arm64-to-sim//:arm64-to-sim" This should
    # deped on "@arm64-to-sim//:arm64-to-sim" from source ( see
    # rules/repositories.bzl ) However, rules_swift causes the error:
    # bazel-out/darwin_arm64-dbg/bin/external/arm64-to-sim/libarm64-to-sim.a,
    # building for macOS-arm64 but attempting to link with file built for
    # macOS-x86_64. Requires fixing or updating rules_swift
    srcs = [
        "arm64-to-sim",
        "update_dynamic.sh",
        "update_static.sh",
    ],
)
