load("@build_bazel_rules_ios//rules:static_framework_generator.bzl", "static_framework_generator")

exports_files([
    "installer.sh",
])

static_framework_generator(
    name = "TargetXIBStaticFrameworkGenerator",
    destination_relative_to_workspace = "tests/ios/static_framework_generator/bazel-generated",
    targets = ["//tests/ios/static_framework_generator:TargetXIB"],
)
