load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "api",
    srcs = [
        "ios_rules.bzl",
        "providers.bzl",
        "version.bzl",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "@build_bazel_apple_support//lib:apple_support",
        "@build_bazel_rules_apple//apple",
    ],
)
