load("//rules:framework.bzl", "apple_framework")

objc_library(
    name = "Impl",
    srcs = ["BazelRunfileBridge.mm"],
    hdrs = ["BazelRunfileBridge.h"],
    deps = ["@bazel_tools//tools/cpp/runfiles"],
)

apple_framework(
    name = "BazelRunfileBridge",
    public_headers = ["BazelRunfileBridge.h"],
    visibility = ["//visibility:public"],
    deps = [":Impl"],
)
