load("//rules:framework.bzl", "apple_framework")
load("//rules:app.bzl", "ios_application")

apple_framework(
    name = "FW",
    srcs = glob(["FW/*"]),
    private_headers = glob(["FW/*_Private.*"]),
)

apple_framework(
    name = "Empty",
)

apple_framework(
    name = "OnlySources",
    srcs = glob(["OnlySources/*.m"]),
)

ios_application(
    name = "App",
    srcs = ["App/main.m"],
    bundle_id = "com.example.app",
    minimum_os_version = "10.0",
    deps = [
        ":Empty",
        ":FW",
        ":OnlySources",
    ],
)
