load("//rules:framework.bzl", "apple_framework")
load("//rules:app.bzl", "ios_application")
load("//rules:test.bzl", "ios_unit_test")

apple_framework(
    name = "FW",
    srcs = glob(["FW/*"]),
    private_headers = glob(["FW/*_Private.*"]),
)

apple_framework(
    name = "Empty",
)

apple_framework(
    name = "OnlySources",
    srcs = glob(["OnlySources/*.m"]),
)

ios_application(
    name = "App",
    srcs = ["App/main.m"],
    bundle_id = "com.example.app",
    minimum_os_version = "10.0",
    deps = [
        ":Empty",
        ":FW",
        ":OnlySources",
    ],
)

ios_application(
    name = "AppWithInfoPlist",
    srcs = ["App/main.m"],
    bundle_id = "com.example.app",
    infoplists = [{
        "NSPhotoLibraryAddUsageDescription": "This app requires access to the photo library.",
        "NSPhotoLibraryUsageDescription": "This app requires access to the photo library.",
        "UISupportedExternalAccessoryProtocols": [
            "com.example.eap",
        ],
        "Int": 1,
        "Dict": {
            "A": "a",
            "B": "b",
        },
    }],
    minimum_os_version = "10.0",
    deps = [
        ":Empty",
        ":FW",
        ":OnlySources",
    ],
)

ios_unit_test(
    name = "TestAppWithInfoPlist",
    srcs = ["infoplist_test.m"],
    minimum_os_version = "10.0",
    test_host = ":AppWithInfoPlist",
)
